--- a/blog.html
+++ b/blog.html
@@ -1,35 +1,59 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Обратная связь</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
       <div class="logo">
         <img src="pictures/logo.png" />
       </div>
-      <nav class="menu"> 
+      <nav class="menu">
         <ul class="nav_ul">
-            <li><a href="index.html"><span>Home<span></a></li>
-            <li><a href="feedback.html"><span>Feedback</span></a></li>
-            <li><a href="about.html"><span>About</span></a></li>
-            <li><a href="blog.html"><span>Blog</span></a></li>
+          <li>
+            <a href="index.html"><span>Home</span></a>
+          </li>
+          <li>
+            <a href="feedback.html"><span>Feedback</span></a>
+          </li>
+          <li>
+            <a href="about.html"><span>About</span></a>
+          </li>
+          <li>
+            <a href="blog.html"><span>Blog</span></a>
+          </li>
         </ul>
-    </nav>
+      </nav>
     </header>
     <main>
-        <article class="article_main">
-          <img src="pictures/blog1.jpg" alt="Cactus1">
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse dolore quaerat aspernatur nam ipsa qui expedita voluptatum corrupti! Nesciunt optio aspernatur modi vero neque deserunt tempore nobis, rem dolor nostrum?</p>  
-        </article> 
-        
-        <article class="article_main">
-          <img src="pictures/blog2.jpg" alt="Cactus2">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quo dignissimos cumque quam explicabo. Quidem, numquam magnam. Nesciunt laudantium obcaecati at officia. Cumque in veniam alias unde molestiae saepe temporibus.</p>
-        </article>
+      <article class="blog_article">
+        <img src="pictures/blog1.jpg" alt="Cactus1" />
+        <div class="blog_article__text">
+          <h2>Some title</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse
+            dolore quaerat aspernatur nam ipsa qui expedita voluptatum corrupti!
+            Nesciunt optio aspernatur modi vero neque deserunt tempore nobis,
+            rem dolor nostrum?
+          </p>
+        </div>
+      </article>
+
+      <article class="blog_article">
+        <img src="pictures/blog2.jpg" alt="Cactus2" />
+        <div class="blog_article__text">
+          <h2>Cactus text</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa quo
+            dignissimos cumque quam explicabo. Quidem, numquam magnam. Nesciunt
+            laudantium obcaecati at officia. Cumque in veniam alias unde
+            molestiae saepe temporibus.
+          </p>
+        </div>
+      </article>
     </main>
-</body>
+  </body>
 </html>
