Get slides only

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     </header>
     <main>
       <section class="main_section_index">
-        <img src="pictures/background.jpg" alt="Desert" />
         <h1>Home page</h1>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi
@@ -46,6 +45,32 @@
           dolor quibusdam, repellat vero aperiam! Reiciendis quibusdam
           repudiandae quos excepturi doloribus soluta!
         </p>
+
+        <div id="carouselConteiner" class="carousel_slide" data-ride="carousel">
+          <ul class="carousel-inner">
+            <li class="carousel-item active">
+              <img
+                class="carousel-img"
+                src="pictures/dog1.jpeg"
+                alt="First slide"
+              />
+            </li>
+            <li class="carousel-item">
+              <img
+                class="carousel-img"
+                src="pictures/dog2.gif"
+                alt="Second slide"
+              />
+            </li>
+            <li class="carousel-item">
+              <img
+                class="carousel-img"
+                src="pictures/dog3.jpeg"
+                alt="Third slide"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
   </body>
