Add buttom slider

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           repudiandae quos excepturi doloribus soluta!
         </p>
 
-        <div id="carouselConteiner" class="carousel_slide" data-ride="carousel">
-          <ul class="carousel-inner">
+        <div id="carousel-main-conteiner" class="carousel_slider">
+          <ul class="carousel-wrapper">
             <li class="carousel-item active">
               <img
                 class="carousel-img"
@@ -70,6 +70,10 @@
               />
             </li>
           </ul>
+          <div class="carousel-nav">
+            <button class="prev" role="button">&#10094;</button>
+            <button class="next" role="button">&#10095;</button>
+          </div>
         </div>
       </section>
     </main>
